samples/express/views/errors/undefined-function.njk
User: {{ getCurrentUser().username }}
Role: {{ getUserRole(user.id) }}
Last login: {{ formatDate(timestamp) }}
